--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,3 @@
-@media screen and (min-width: 1280px) {
-  .header {
-    width: 100%;
-  }
-}
 .header {
   z-index: 2;
   height: 130px;
@@ -11,9 +6,19 @@
   background-color: #fff;
 }
 
+@media screen and (max-width: 767px) {
+  .header {
+    position: relative;
+  }
+}
 @media screen and (min-width: 768px) {
   .header {
     position: fixed;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .header {
+    width: 100%;
   }
 }
 .header-conteiner {
@@ -38,6 +43,9 @@
   }
 }
 .menu-button {
+  z-index: 1;
+  top: -20px;
+  right: -20px;
   width: 130px;
   height: 130px;
   border: none;
@@ -61,10 +69,8 @@
     left: 0;
     min-height: 100%;
     padding: 137px 40px;
-    width: 322px;
+    width: 65%;
     background-color: #fff;
-    opacity: 0;
-    pointer-events: none;
   }
 }
 @media screen and (min-width: 768px) {
