--- a/sass/footer/copyright.scss
+++ b/sass/footer/copyright.scss
@@ -1,16 +1,34 @@
 .copyright {
-    display: flex;
     padding-top: 19px;
+  }
+
+  @media screen and (min-width:768px){
+  .copyright{
+    display: flex;
+  }
   }
   
   .copyright-paragraph {
     font-size: 16px;
     font-weight: 400;
   }
+
+ @media screen and (max-width: 767px){
+  .copyrigth-paragraph>span{
+    display: block;
+  }
+ }
   
   .social-list {
     display: flex;
     margin-left: auto;
+  }
+
+  @media screen and (max-width: 767px){
+    .social-list{
+      margin-top: 11px;
+      justify-content: center;
+    }
   }
   
   .social-item:not(:last-child) {
