--- a/sass/mainPage/projects/projects.scss
+++ b/sass/mainPage/projects/projects.scss
@@ -1,70 +1,67 @@
 .projects-conteiner {
   padding-top: 50px;
   padding-bottom: 50px;
-
-  
 }
 
-  @media screen and (min-width: 768px){
-
-    .projects-conteiner {
-      padding-top: 122px;
-      padding-bottom: 48px;
-      
-    }
+@media screen and (min-width: 768px) {
+  .projects-conteiner {
+    padding-top: 122px;
+    padding-bottom: 48px;
   }
+}
+.projects-list {
+  padding-top: 32px;
+  padding-bottom: 38px;
+}
+
+@media screen and (min-width: 768px) {
   .projects-list {
-    padding-top: 32px;
-    padding-bottom: 38px;
+    padding-top: 41px;
+    padding-bottom: 48px;
+
+    display: grid;
+
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+    column-gap: 24px;
+    row-gap: 24px;
   }
+}
 
+.project-item {
+  justify-self: center;
+}
 
-
-  @media screen and (min-width: 768px){
-    .projects-list {
-      padding-top: 41px;
-      padding-bottom: 48px;
-  
-      display: grid;
-  
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-  
-      column-gap: 24px;
-      row-gap: 24px;
-    }
+@media screen and (max-width: 767px) {
+  .project-item:not(:last-child) {
+    margin-bottom: 24px;
   }
-  
+}
+
+@media screen and (min-width: 768px) {
   .project-item {
     width: 384.33px;
+  }
+}
 
-    justify-self: center;
-  }
+.projects-img {
+  /* width: 384.33px; */
+  /* height: 319.79px; */
+  border-radius: 3%;
+}
 
-  @media screen and (max-width: 767px){
-    .project-item:not(:last-child){
-      margin-bottom: 24px;
-    }
-  }
-  
-  .projects-img {
-    /* width: 384.33px; */
-    /* height: 319.79px; */
-    border-radius: 3%;
-  }
-  
-  .project-title {
-    margin-top: 4px;
-    font-size: 20px;
-    margin-bottom: 3px;
-    font-weight: 400;
-    /* width: 384.33px; */
-    text-align: center;
-  }
-  
-  .project-date {
-    font-size: 16px;
-    font-weight: 400;
-    width: 384.33px;
-    text-align: center;
-  }
+.project-title {
+  margin-top: 4px;
+  font-size: 20px;
+  margin-bottom: 3px;
+  font-weight: 400;
+  /* width: 384.33px; */
+  text-align: center;
+}
+
+.project-date {
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+}
