menu button icons

--- a/css/header.css
+++ b/css/header.css
@@ -22,6 +22,7 @@
   }
 }
 .header-conteiner {
+  position: relative;
   display: flex;
   height: 100%;
 }
@@ -43,14 +44,15 @@
   }
 }
 .menu-button {
-  z-index: 1;
-  top: -20px;
+  position: absolute;
   right: -20px;
+  top: -20px;
+  z-index: 1;
   width: 130px;
   height: 130px;
   border: none;
   border-radius: 50%;
-  background-color: rgb(246, 246, 246);
+  background-color: #F7F7F7;
 }
 
 @media screen and (min-width: 767px) {
