--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,7 @@ body {
   }
 }
 .header-conteiner {
+  position: relative;
   display: flex;
   height: 100%;
 }
@@ -139,14 +140,15 @@ body {
   }
 }
 .menu-button {
-  z-index: 1;
-  top: -20px;
+  position: absolute;
   right: -20px;
+  top: -20px;
+  z-index: 1;
   width: 130px;
   height: 130px;
   border: none;
   border-radius: 50%;
-  background-color: rgb(246, 246, 246);
+  background-color: #F7F7F7;
 }
 
 @media screen and (min-width: 767px) {
