menu-button and hero

--- a/css/header.css
+++ b/css/header.css
@@ -39,15 +39,17 @@
 
 @media screen and (max-width: 767px) {
   .logo-img {
-    width: 245px;
+    max-width: 245px;
     height: 77px;
   }
 }
 .menu-button {
   position: absolute;
-  right: -20px;
-  top: -20px;
+  top: 0;
+  right: 0;
   z-index: 1;
+  margin-right: -5%;
+  margin-top: -6%;
   width: 130px;
   height: 130px;
   border: none;
@@ -60,6 +62,18 @@
     display: none;
   }
 }
+.icon-cross {
+  display: none;
+}
+
+.is-open .icon-cross {
+  display: block;
+}
+
+.is-open .icon-burger {
+  display: none;
+}
+
 .nav-list {
   margin-left: auto;
 }
@@ -73,6 +87,10 @@
     padding: 137px 40px;
     width: 65%;
     background-color: #fff;
+  }
+  .nav-list.is-hidden {
+    opacity: 0;
+    pointer-events: none;
   }
 }
 @media screen and (min-width: 768px) {
