--- a/sass/mainPage/hero/housing.scss
+++ b/sass/mainPage/hero/housing.scss
@@ -11,6 +11,12 @@
     align-self: center; */
     padding-top: 20px;
   }
+
+  @media screen and (max-width: 767px){
+    .housing{
+      padding-top: 260px;
+    }
+  }
   
   .housing-list {
     display: flex;
