--- a/css/body.css
+++ b/css/body.css
@@ -9,7 +9,8 @@ body {
 
 @media screen and (max-width: 767px) {
   .second-title {
-    font-size: 20px;
+    font-size: 40px;
+    text-align: center;
   }
 }
 .visually-hidden {
