--- a/css/buttonList.css
+++ b/css/buttonList.css
@@ -22,4 +22,14 @@
   font-size: 20px;
   font-weight: 400;
   cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .button-list {
+    margin-top: 31px;
+    margin-bottom: 0;
+  }
+  .switch-button {
+    font-size: 16px;
+  }
 }/*# sourceMappingURL=buttonList.css.map */
