--- a/css/header.css
+++ b/css/header.css
@@ -22,7 +22,6 @@
   }
 }
 .header-conteiner {
-  position: relative;
   display: flex;
   height: 100%;
 }
@@ -48,13 +47,13 @@
   top: 0;
   right: 0;
   z-index: 1;
-  margin-right: -5%;
-  margin-top: -6%;
-  width: 130px;
-  height: 130px;
+  width: 110px;
+  height: 110px;
+  background-color: inherit;
   border: none;
-  border-radius: 50%;
-  background-color: #F7F7F7;
+  background-image: url("../../img/elipse.png");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 @media screen and (min-width: 767px) {
@@ -62,6 +61,12 @@
     display: none;
   }
 }
+.menu-button > svg {
+  position: absolute;
+  top: 26px;
+  right: 26px;
+}
+
 .icon-cross {
   display: none;
 }
