--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,8 @@ body {
 
 @media screen and (max-width: 767px) {
   .second-title {
-    font-size: 20px;
+    font-size: 40px;
+    text-align: center;
   }
 }
 .visually-hidden {
@@ -66,7 +67,7 @@ body {
 }
 
 .conteiner {
-  max-width: 1280px;
+  max-width: 1200px;
   margin: 0;
   padding-left: 40px;
   padding-right: 40px;
@@ -118,7 +119,6 @@ body {
   }
 }
 .header-conteiner {
-  position: relative;
   display: flex;
   height: 100%;
 }
@@ -144,13 +144,13 @@ body {
   top: 0;
   right: 0;
   z-index: 1;
-  margin-right: -5%;
-  margin-top: -6%;
-  width: 130px;
-  height: 130px;
+  width: 110px;
+  height: 110px;
+  background-color: inherit;
   border: none;
-  border-radius: 50%;
-  background-color: #F7F7F7;
+  background-image: url("../../img/elipse.png");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 @media screen and (min-width: 767px) {
@@ -158,6 +158,12 @@ body {
     display: none;
   }
 }
+.menu-button > svg {
+  position: absolute;
+  top: 26px;
+  right: 26px;
+}
+
 .icon-cross {
   display: none;
 }
@@ -550,11 +556,24 @@ body {
   cursor: pointer;
 }
 
+@media screen and (max-width: 767px) {
+  .button-list {
+    margin-top: 31px;
+    margin-bottom: 0;
+  }
+  .switch-button {
+    font-size: 16px;
+  }
+}
 .page-title {
   background-color: #fff;
-  padding-top: 130px;
 }
 
+@media screen and (min-width: 768px) {
+  .page-title {
+    padding-top: 130px;
+  }
+}
 #slider-wrapper {
   display: block;
   min-height: 100px;
@@ -1030,38 +1049,69 @@ body {
   border-bottom: 1px solid #000;
 }
 
+.about__img {
+  margin: auto;
+  background-image: url(../../img/about-apartment.png);
+  width: 1192px;
+  height: 589px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media screen and (max-width: 767px) {
+  .about__img {
+    width: 358px;
+    height: 273px;
+    background-image: url(../../img/about-apartment-mobile.png);
+  }
+}
 .about__title-conteiner {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  row-gap: 21px;
   padding-top: 24px;
   padding-bottom: 17px;
 }
 
 .about__title-conteiner p {
-  grid-column-start: 2;
-  grid-row-start: 2;
   font-size: 32px;
 }
 
+@media screen and (min-width: 768px) {
+  .about__title-conteiner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 21px;
+  }
+  .about__title-conteiner p {
+    grid-column-start: 2;
+    grid-row-start: 2;
+  }
+}
 .about__title {
   font-size: 64px;
   font-weight: 900;
 }
 
+@media screen and (max-width: 767px) {
+  .about__title {
+    font-size: 40px;
+  }
+}
 .about__conteiner {
   padding-top: 104px;
   padding-bottom: 118px;
 }
 
 .about__benefits-list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
   justify-items: center;
   align-items: center;
   padding-bottom: 131px;
 }
 
+@media screen and (min-width: 768px) {
+  .about__benefits-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 .about__benefits-item {
   max-width: 250px;
   text-align: center;
@@ -1079,13 +1129,17 @@ body {
 }
 
 .about__housing-list {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
   justify-items: center;
   margin-top: 45px;
   margin-bottom: 45px;
 }
 
+@media screen and (min-width: 768px) {
+  .about__housing-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 .about_housing-item {
   width: 577px;
 }
