--- a/css/projectsConteiner.css
+++ b/css/projectsConteiner.css
@@ -1,4 +1,9 @@
 .page-title {
   background-color: #fff;
-  padding-top: 130px;
+}
+
+@media screen and (min-width: 768px) {
+  .page-title {
+    padding-top: 130px;
+  }
 }/*# sourceMappingURL=projectsConteiner.css.map */
