--- a/sass/about/about.scss
+++ b/sass/about/about.scss
@@ -1,23 +1,58 @@
-.about__title-conteiner {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+.about__img{
+  margin: auto;
+  background-image: url(../../img/about-apartment.png);
+  width: 1192px;
+  height: 589px;
 
-  row-gap: 21px;
+  background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+@media screen and (max-width:767px){
+  .about__img{
+    width: 358px;
+  height: 273px;
+    background-image: url(../../img/about-apartment-mobile.png);
+  }
+}
+
+.about__title-conteiner {
+  
 
   padding-top: 24px;
   padding-bottom: 17px;
 }
 
+
+
 .about__title-conteiner p {
-  grid-column-start: 2;
-  grid-row-start: 2;
 
   font-size: 32px;
+}
+
+@media screen and (min-width: 768px){
+  .about__title-conteiner {
+    display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  row-gap: 21px;
+  }
+  .about__title-conteiner p {
+    grid-column-start: 2;
+    grid-row-start: 2;
+  }
 }
 
 .about__title {
   font-size: 64px;
   font-weight: 900;
+}
+
+@media screen and (max-width: 767px){
+  .about__title{
+    font-size: 40px;
+  }
 }
 
 .about__conteiner {
@@ -26,13 +61,19 @@
 }
 
 .about__benefits-list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
 
   justify-items: center;
   align-items: center;
 
   padding-bottom: 131px;
+}
+
+@media screen and (min-width: 768px){
+  .about__benefits-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  
+  }
 }
 
 .about__benefits-item {
@@ -53,13 +94,19 @@
 }
 
 .about__housing-list {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
 
   justify-items: center;
 
   margin-top: 45px;
   margin-bottom: 45px;
+}
+
+@media screen and (min-width: 768px){
+  .about__housing-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+  }
 }
 
 .about_housing-item {
