--- a/sass/projectsPage/buttonList.scss
+++ b/sass/projectsPage/buttonList.scss
@@ -28,3 +28,13 @@
 
     cursor: pointer;
   }
+
+  @media screen and (max-width: 767px){
+    .button-list{
+      margin-top: 31px;
+      margin-bottom: 0;
+    }
+    .switch-button{
+      font-size: 16px;
+    }
+  }
