--- a/css/about.css
+++ b/css/about.css
@@ -7,13 +7,6 @@
   background-size: cover;
 }
 
-@media screen and (max-width: 767px) {
-  .about__img {
-    width: 358px;
-    height: 273px;
-    background-image: url(../../img/about-apartment-mobile.png);
-  }
-}
 .about__title-conteiner {
   padding-top: 24px;
   padding-bottom: 17px;
@@ -88,6 +81,16 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
+  .about__house-img {
+    max-width: 1200px;
+    height: 515px;
+    background-image: url(../../img/about-house.png);
+  }
+  .about__teracce-img {
+    max-width: 1200px;
+    height: 515px;
+    background-image: url(../../img/about-teracce.png);
+  }
 }
 .about_housing-item {
   width: 577px;
@@ -101,4 +104,47 @@
 
 .about_housing-item p {
   font-size: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .about__img {
+    width: 358px;
+    height: 273px;
+    background-image: url(../../img/about-apartment-mobile.png);
+  }
+  .about__title-conteiner {
+    padding-top: 23px;
+    padding-bottom: 46px;
+  }
+  .about__title-conteiner p {
+    font-size: 24px;
+  }
+  .about__benefits-item {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .about__benefits-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+  .about__conteiner {
+    padding-top: 55px;
+    padding-bottom: 96px;
+  }
+  .about__house-img {
+    width: 356px;
+    height: 302px;
+    background-image: url(../../img/about-house-mobile.png);
+  }
+  .about__benefits-list {
+    padding-bottom: 65px;
+  }
+  .about_housing-item h3 {
+    margin-bottom: 14px;
+  }
+  .about_housing-item p {
+    width: 356px;
+  }
+  .about_housing-item-desktop {
+    display: none;
+  }
 }/*# sourceMappingURL=about.css.map */
