--- a/sass/contacts/contacts.scss
+++ b/sass/contacts/contacts.scss
@@ -72,6 +72,13 @@ grid-area: 3/1/4/3;
 text-align: center;
  }
 
+ @media screen and (max-width: 767px){
+   .partners{
+      padding-top: 65px;
+      
+   }
+ }
+
  .partners>h3{
     font-size: 36px;
     font-weight: 900;
