contacts  conteiner nobile

--- a/css/footer.css
+++ b/css/footer.css
@@ -29,15 +29,16 @@
   }
 }
 .contakts-item {
-  margin-bottom: 24px;
   font-size: 16px;
   font-weight: 400;
+  line-height: 1.39;
 }
 
 .footer__contacts-kind {
   margin-bottom: 8px;
   font-size: 20px;
   font-weight: 400;
+  line-height: 1.05;
 }
 
 .contacts-link {
