--- a/sass/footer/copyright.scss
+++ b/sass/footer/copyright.scss
@@ -11,6 +11,7 @@
   .copyright-paragraph {
     font-size: 16px;
     font-weight: 400;
+    line-height: 1.39;
   }
 
  @media screen and (max-width: 767px){
