--- a/css/about.css
+++ b/css/about.css
@@ -14,6 +14,7 @@
 
 .about__title-conteiner p {
   font-size: 32px;
+  line-height: 1.3;
 }
 
 @media screen and (min-width: 768px) {
@@ -30,6 +31,7 @@
 .about__title {
   font-size: 64px;
   font-weight: 900;
+  line-height: 0.95;
 }
 
 @media screen and (max-width: 767px) {
@@ -59,6 +61,11 @@
   text-align: center;
 }
 
+.about__benefits-item > p {
+  font-size: 20px;
+  line-height: 1.05;
+}
+
 .about__benefits-item svg {
   display: block;
   margin-bottom: 31px;
@@ -68,6 +75,8 @@
 
 .about__benefits-description {
   margin-top: 12px;
+  font-size: 14px;
+  line-height: 1.24;
 }
 
 .about__housing-list {
@@ -140,9 +149,12 @@
   }
   .about_housing-item h3 {
     margin-bottom: 14px;
+    font-size: 32px;
+    line-height: 1.05;
   }
   .about_housing-item p {
     width: 356px;
+    line-height: 1.6;
   }
   .about_housing-item-desktop {
     display: none;
