--- a/css/buttonList.css
+++ b/css/buttonList.css
@@ -13,6 +13,7 @@
   padding: 12px 24px;
   font-size: 20px;
   font-weight: 400;
+  line-height: 1;
   /* border-radius: 40%; */
   display: block;
   height: 48px;
