--- a/css/hero.css
+++ b/css/hero.css
@@ -27,9 +27,11 @@
 }
 .main-title {
   display: block;
+  padding-bottom: 10px;
   align-self: center;
   font-size: 48px;
   font-weight: 900;
+  line-height: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -41,6 +43,7 @@
 }
 .hero-contents {
   margin-right: -16px;
+  line-height: 1.3;
 }
 
 @media screen and (min-width: 768px) {
@@ -61,6 +64,7 @@
   /* width: 764px; */
   font-size: 14px;
   font-weight: 400;
+  line-height: 1.36;
 }
 
 @media screen and (max-width: 767px) {
