--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body {
 .second-title {
   font-size: 48px;
   font-weight: 900;
+  line-height: 0.95;
 }
 
 @media screen and (max-width: 767px) {
@@ -92,6 +93,7 @@ body {
   background-color: inherit;
   font-size: 24px;
   font-weight: 400;
+  line-height: 1;
   cursor: pointer;
 }
 
@@ -242,15 +244,16 @@ body {
   }
 }
 .contakts-item {
-  margin-bottom: 24px;
   font-size: 16px;
   font-weight: 400;
+  line-height: 1.39;
 }
 
 .footer__contacts-kind {
   margin-bottom: 8px;
   font-size: 20px;
   font-weight: 400;
+  line-height: 1.05;
 }
 
 .contacts-link {
@@ -269,6 +272,7 @@ body {
 .copyright-paragraph {
   font-size: 16px;
   font-weight: 400;
+  line-height: 1.39;
 }
 
 @media screen and (max-width: 767px) {
@@ -320,9 +324,11 @@ body {
 }
 .main-title {
   display: block;
+  padding-bottom: 10px;
   align-self: center;
   font-size: 48px;
   font-weight: 900;
+  line-height: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -334,6 +340,7 @@ body {
 }
 .hero-contents {
   margin-right: -16px;
+  line-height: 1.3;
 }
 
 @media screen and (min-width: 768px) {
@@ -354,6 +361,7 @@ body {
   /* width: 764px; */
   font-size: 14px;
   font-weight: 400;
+  line-height: 1.36;
 }
 
 @media screen and (max-width: 767px) {
@@ -395,6 +403,10 @@ body {
     justify-content: center;
   }
 }
+.housing-item {
+  line-height: 1;
+}
+
 .housing-item:not(:last-child) {
   margin-right: 33px;
 }
@@ -462,6 +474,7 @@ body {
   font-size: 20px;
   margin-bottom: 3px;
   font-weight: 400;
+  line-height: 1;
   /* width: 384.33px; */
   text-align: center;
 }
@@ -470,6 +483,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   text-align: center;
+  line-height: 1.6;
 }
 
 .news-conteiner {
@@ -516,18 +530,21 @@ body {
   margin-top: 16px;
   font-size: 14px;
   font-weight: 400;
+  line-height: 0.95;
 }
 
 .news-title {
   margin-top: 4px;
   font-size: 20px;
   font-weight: 400;
+  line-height: 1.05;
 }
 
 .news-text {
   margin-top: 8px;
   font-size: 14px;
   font-weight: 400;
+  line-height: 1.39;
 }
 
 .button-list {
@@ -545,6 +562,7 @@ body {
   padding: 12px 24px;
   font-size: 20px;
   font-weight: 400;
+  line-height: 1;
   /* border-radius: 40%; */
   display: block;
   height: 48px;
@@ -835,13 +853,18 @@ body {
   height: 32px;
 }
 
-.contacts-conteiner {
-  padding-top: 82px;
-  padding-bottom: 82px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+@media screen and (max-width: 767px) {
+  .contacts-conteiner {
+    padding-top: 34px;
+    padding-bottom: 56px;
+  }
 }
-
+@media screen and (min-width: 768px) {
+  .contacts-conteiner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 .contacts {
   grid-area: 1/1/2/2;
 }
@@ -900,27 +923,41 @@ body {
   text-align: center;
 }
 
-@media screen and (max-width: 767px) {
-  .partners {
-    padding-top: 65px;
-  }
-}
 .partners > h3 {
   font-size: 36px;
   font-weight: 900;
+  line-height: 1.05;
 }
 
+@media screen and (max-width: 767px) {
+  .partners > h3 {
+    font-size: 32px;
+    width: 349px;
+  }
+}
 .partners__list {
-  display: flex;
   justify-content: center;
   margin-top: 32px;
   align-items: center;
 }
 
-.partner-item:not(:last-child) {
-  margin-right: 50px;
+.partner-item > a > img {
+  width: 206px;
 }
 
+@media screen and (max-width: 767px) {
+  .partner-item:not(:last-child) {
+    margin-bottom: 50px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .partners__list {
+    display: flex;
+  }
+  .partner-item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
 .contacts__form {
   font-size: 20px;
 }
@@ -1070,6 +1107,7 @@ body {
 
 .about__title-conteiner p {
   font-size: 32px;
+  line-height: 1.3;
 }
 
 @media screen and (min-width: 768px) {
@@ -1086,6 +1124,7 @@ body {
 .about__title {
   font-size: 64px;
   font-weight: 900;
+  line-height: 0.95;
 }
 
 @media screen and (max-width: 767px) {
@@ -1115,6 +1154,11 @@ body {
   text-align: center;
 }
 
+.about__benefits-item > p {
+  font-size: 20px;
+  line-height: 1.05;
+}
+
 .about__benefits-item svg {
   display: block;
   margin-bottom: 31px;
@@ -1124,6 +1168,8 @@ body {
 
 .about__benefits-description {
   margin-top: 12px;
+  font-size: 14px;
+  line-height: 1.24;
 }
 
 .about__housing-list {
@@ -1196,9 +1242,12 @@ body {
   }
   .about_housing-item h3 {
     margin-bottom: 14px;
+    font-size: 32px;
+    line-height: 1.05;
   }
   .about_housing-item p {
     width: 356px;
+    line-height: 1.6;
   }
   .about_housing-item-desktop {
     display: none;
