--- a/css/mainButton.css
+++ b/css/mainButton.css
@@ -8,5 +8,6 @@
   background-color: inherit;
   font-size: 24px;
   font-weight: 400;
+  line-height: 1;
   cursor: pointer;
 }/*# sourceMappingURL=mainButton.css.map */
