--- a/sass/about/about.scss
+++ b/sass/about/about.scss
@@ -26,6 +26,7 @@
 .about__title-conteiner p {
 
   font-size: 32px;
+  line-height: 1.3;
 }
 
 
@@ -45,6 +46,7 @@
 .about__title {
   font-size: 64px;
   font-weight: 900;
+  line-height: 0.95;
 }
 
 @media screen and (max-width: 767px){
@@ -80,6 +82,10 @@
   text-align: center;
 }
 
+.about__benefits-item > p {
+  font-size: 20px;
+  line-height: 1.05;
+}
 
 
 .about__benefits-item svg {
@@ -91,6 +97,8 @@
 
 .about__benefits-description {
   margin-top: 12px;
+  font-size: 14px;
+  line-height: 1.24;
 }
 
 .about__housing-list {
@@ -183,11 +191,14 @@
 
   .about_housing-item h3 {
     margin-bottom: 14px;
+    font-size: 32px;
+    line-height: 1.05;
 
   }
 
   .about_housing-item p {
     width: 356px;
+    line-height: 1.6;
 
   }
 
