--- a/sass/contacts/contacts.scss
+++ b/sass/contacts/contacts.scss
@@ -1,11 +1,18 @@
-.contacts-conteiner{
-    padding-top: 82px;
-    padding-bottom: 82px;
-    display: grid;
+
+
+@media screen and (max-width: 767px) {
+   .contacts-conteiner{
+      padding-top: 34px;
+      padding-bottom: 56px;
+   }
+}
+
+@media screen and (min-width: 768px) {
+   .contacts-conteiner{
+      display: grid;
 
     grid-template-columns: repeat(2, 1fr);
-    
-    // grid-template-rows: repeat(3);
+   }
 }
 
 .contacts{
@@ -72,28 +79,46 @@ grid-area: 3/1/4/3;
 text-align: center;
  }
 
- @media screen and (max-width: 767px){
-   .partners{
-      padding-top: 65px;
-      
-   }
- }
+
 
  .partners>h3{
     font-size: 36px;
     font-weight: 900;
+    line-height: 1.05;
+ }
+
+ @media screen and (max-width: 767px){
+   .partners>h3{
+      font-size: 32px;
+      width: 349px;
+   }
  }
 
  .partners__list{
-    display: flex;
     justify-content: center;
     margin-top: 32px;
 
     align-items: center;
  }
 
- .partner-item:not(:last-child){
-margin-right: 50px;
+ .partner-item > a > img {
+   width: 206px;
+ }
+
+ @media screen and (max-width: 767px) {
+   .partner-item:not(:last-child){
+      margin-bottom: 50px;
+   }
+ }
+
+ @media screen and (min-width: 768px){
+   .partners__list{
+      display: flex;
+   }
+  
+   .partner-item:not(:last-child){
+  margin-right: 50px;
+   }
  }
 
  .contacts__form{
