--- a/sass/footer/footer.scss
+++ b/sass/footer/footer.scss
@@ -35,9 +35,9 @@
   }
   
   .contakts-item {
-    margin-bottom: 24px;
     font-size: 16px;
     font-weight: 400;
+    line-height: 1.39;
   }
   
   .footer__contacts-kind {
@@ -45,6 +45,7 @@
   
     font-size: 20px;
     font-weight: 400;
+    line-height: 1.05;
   }
   
   .contacts-link {
