--- a/sass/mainPage/hero/hero.scss
+++ b/sass/mainPage/hero/hero.scss
@@ -32,11 +32,13 @@
 
 .main-title {
   display: block;
+  padding-bottom: 10px;
 
   align-self: center;
 
   font-size: 48px;
   font-weight: 900;
+  line-height: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -51,6 +53,7 @@
 .hero-contents {
 
   margin-right: -16px;
+  line-height: 1.3;
 }
 
 @media screen and (min-width: 768px) {
@@ -75,6 +78,7 @@
   /* width: 764px; */
   font-size: 14px;
   font-weight: 400;
+  line-height: 1.36;
 }
 
 @media screen and (max-width: 767px){
