--- a/sass/mainPage/hero/housing.scss
+++ b/sass/mainPage/hero/housing.scss
@@ -31,6 +31,10 @@
       justify-content: center;
     }
   }
+
+  .housing-item{
+    line-height: 1;
+  }
   .housing-item:not(:last-child) {
     margin-right: 33px;
   }
