--- a/sass/mainPage/projects/projects.scss
+++ b/sass/mainPage/projects/projects.scss
@@ -57,6 +57,7 @@
   font-size: 20px;
   margin-bottom: 3px;
   font-weight: 400;
+  line-height: 1;
   /* width: 384.33px; */
   text-align: center;
 }
@@ -65,4 +66,5 @@
   font-size: 16px;
   font-weight: 400;
   text-align: center;
+  line-height: 1.6;
 }
