--- a/sass/projectsPage/buttonList.scss
+++ b/sass/projectsPage/buttonList.scss
@@ -14,6 +14,7 @@
     padding: 12px 24px;
     font-size: 20px;
     font-weight: 400;
+    line-height: 1;
     /* border-radius: 40%; */
   
     display: block;
