--- a/sass/contacts/contacts.scss
+++ b/sass/contacts/contacts.scss
@@ -19,8 +19,15 @@
     grid-area: 1/1/2/2;
 }
 
+@media screen and (max-width: 767px){
+   .contacts__list{
+      margin-bottom: 40px;
+   }
+}
+
 .contacts__list-item{
     font-size: 20px;
+    line-height: 1.36;
 }
 
 .contacts__list-item:not(:last-child){
@@ -30,19 +37,42 @@
 .contacts-kind{
     margin-bottom: 32px;
     font-size: 36px;
+    font-weight: 900;
+    line-height: 1.05;
 }
 
 .persons-list{
-    display: flex;
     justify-content: center;
-    column-gap: 40px;
-    grid-area: 1/2/2/3;
+    
 
 }
+
+
 .persons-item{
-    width: 270px;
 
     text-align: center;
+}
+
+@media screen and (min-width: 768px){
+   .persons-list{
+      display: flex;
+    column-gap: 40px;
+    grid-area: 1/2/2/3;
+   }
+
+   .persons-item{
+      width: 270px;
+  
+      text-align: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+   .persons-item > img {
+      height: 293px;
+    object-fit: cover;
+    border-radius: 12px;
+   }
 }
 
 .persons-item>.persons-name{
