--- a/css/main.css
+++ b/css/main.css
@@ -592,125 +592,64 @@ body {
     padding-top: 130px;
   }
 }
-#slider-wrapper {
+.carousel-container {
+  position: relative;
+}
+
+.carousel-container {
+  box-shadow: 0 0 5px rgb(204, 204, 204);
+}
+
+.carousel-container img {
+  border-radius: 0.5em;
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
   display: block;
-  min-height: 100px;
-  margin: auto;
-  position: relative;
 }
 
-#slider {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
-  border-radius: 3px;
+.arrow {
+  display: inline;
 }
 
-#slider > ul {
-  list-style: none;
-  height: 100%;
-  width: 500%;
-  overflow: hidden;
-  position: relative;
-  left: 0px;
-  transition: left 0.5s;
-}
-
-#slider > ul > li {
-  width: 20%;
-  float: left;
-  position: relative;
-}
-
-#slider > ul > li p {
-  padding: 10px;
-}
-
-#slider > ul > li > img {
-  margin: auto;
-  width: 100%;
-}
-
-#slider-wrapper input[type=radio] {
-  position: absolute;
-  left: 50%;
-  bottom: 15px;
-  z-index: 100;
-  visibility: hidden;
-}
-
-#slider-wrapper label {
-  position: absolute;
-  left: 50%;
-  bottom: 30px;
-  z-index: 1;
-  width: 15px;
-  height: 15px;
-  background: #222;
+.prev, .arrow {
   cursor: pointer;
-  transition: background-color 0.5s;
-  border-radius: 50px;
-  border: 1px solid #6b6969;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin: -1.5em -1.5em 0 -1.5em;
+  padding: 19px 27px;
+  color: #007B25;
+  font-size: 30px;
+  transition: 0.3s ease;
+  border-radius: 50%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-color: #fff;
+  border-color: #fff;
 }
 
-#slider-wrapper #button-1:checked ~ label[for=button-1] {
-  background: rgba(255, 255, 255, 0.1);
+.next {
+  right: 0;
 }
 
-#slider-wrapper #button-2:checked ~ label[for=button-2] {
-  background: #888;
+.prev:hover, .next:hover {
+  box-shadow: 0 0 5px #fff;
+  border: 1px solid #fff;
 }
 
-#slider-wrapper #button-3:checked ~ label[for=button-3] {
-  background: #888;
-}
-
-#slider-wrapper #button-4:checked ~ label[for=button-4] {
-  background: #888;
-}
-
-#slider-wrapper #button-5:checked ~ label[for=button-5] {
-  background: #888;
-}
-
-#slider-wrapper label[for=button-1] {
-  margin-left: -40px;
-}
-
-#slider-wrapper label[for=button-2] {
-  margin-left: -20px;
-}
-
-#slider-wrapper label[for=button-4] {
-  margin-left: 20px;
-}
-
-#slider-wrapper label[for=button-5] {
-  margin-left: 40px;
-}
-
-#slider-wrapper #button-1:checked ~ #slider > ul {
-  left: 0;
-}
-
-#slider-wrapper #button-2:checked ~ #slider > ul {
-  left: -100%;
-}
-
-#slider-wrapper #button-3:checked ~ #slider > ul {
-  left: -200%;
-}
-
-#slider-wrapper #button-4:checked ~ #slider > ul {
-  left: -300%;
-}
-
-#slider-wrapper #button-5:checked ~ #slider > ul {
-  left: -400%;
+.carousel-caption {
+  text-align: end;
 }
 
 .options-conteiner {
+  padding-top: 130px;
   background-color: #fff;
   width: 100%;
 }
@@ -917,11 +856,15 @@ body {
        object-fit: cover;
     border-radius: 12px;
   }
+  .persons-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
 }
 .persons-item > .persons-name {
   margin-top: 24px;
   margin-bottom: 11px;
   font-size: 20px;
+  line-height: 1;
 }
 
 .persons-phone {
@@ -934,6 +877,11 @@ body {
   margin-top: 63px;
 }
 
+@media screen and (max-width: 767px) {
+  .contacts__form {
+    margin-top: 40px;
+  }
+}
 .contacts__form-title {
   margin-bottom: 42px;
   font-size: 36px;
@@ -1048,6 +996,11 @@ body {
   margin-top: 41px;
 }
 
+@media screen and (max-width: 767px) {
+  .contacts__partners {
+    display: none;
+  }
+}
 .news__options {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
