--- a/sass/projectsPage/carousel.scss
+++ b/sass/projectsPage/carousel.scss
@@ -1,78 +1,49 @@
-#slider-wrapper {
-      display: block;
-      min-height: 100px;
-      margin: auto;
-      position: relative;
+
+  
+  .carousel-container{
+    position:relative;
   }
-  #slider {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      position: relative;
-      border-radius: 3px;
+  .carousel-container{
+    box-shadow: 0 0 5px rgb(204,204,204);;
   }
-  #slider>ul {
-      list-style: none;
-      height: 100%;
-      width: 500%;
-      overflow: hidden;
-      position: relative;
-      left: 0px;
-      -webkit-transition: left .5s;
-      -moz-transition: left .5s;
-      -o-transition: left .5s;
-      transition: left .5s;
+  .carousel-container img{
+  border-radius:.5em;
   }
-  #slider>ul>li {
-      width: 20%;
-      float: left;
-      position: relative;
+  .hidden{
+    display:none;
   }
-  #slider>ul>li p {
-      padding: 10px;
+  .visible{
+    display:block;
+  }
+  .arrow{
+    display:inline;
   }
   
-  #slider>ul>li>img {
-      margin: auto;
-      width: 100%;
+  .prev, .arrow{
+   cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin: -1.5em -1.5em 0 -1.5em;
+
+    padding: 19px 27px;
+    color: #007B25;
+
+    font-size: 30px;
+    transition: 0.3s ease;
+    border-radius: 50%;
+    user-select: none;
+    background-color:#fff;
+    border-color: #fff;
   }
-  #slider-wrapper input[type=radio] {
-      position: absolute;
-      left: 50%;
-      bottom: 15px;
-      z-index: 100;
-      visibility: hidden;
+  .next {
+    right:0 ;
   }
-  #slider-wrapper label {
-      position: absolute;
-      left: 50%;
-      bottom: 30px;
-      z-index: 1;
-      width: 15px;
-      height: 15px;
-      background: #222;
-      cursor: pointer;
-      -webkit-transition: background-color .5s;
-      -moz-transition: background-color .5s;
-      -o-transition: background-color .5s;
-      transition: background-color .5s;
-      border-radius: 50px;
-      border: 1px solid #6b6969;
+  .prev:hover, .next:hover{
+    box-shadow: 0 0 5px #fff;
+    border:1px solid #fff;
   }
-  
-  #slider-wrapper #button-1:checked~label[for=button-1] { background: rgba($color: #fff, $alpha: 0.1); }
-  #slider-wrapper #button-2:checked~label[for=button-2] { background: #888; }
-  #slider-wrapper #button-3:checked~label[for=button-3] { background: #888; }
-  #slider-wrapper #button-4:checked~label[for=button-4] { background: #888; }
-  #slider-wrapper #button-5:checked~label[for=button-5] { background: #888; }
-  
-  #slider-wrapper label[for=button-1] { margin-left: -40px }
-  #slider-wrapper label[for=button-2] { margin-left: -20px }
-  #slider-wrapper label[for=button-4] { margin-left: 20px }
-  #slider-wrapper label[for=button-5] { margin-left: 40px }
-  
-  #slider-wrapper #button-1:checked~#slider>ul { left: 0 }
-  #slider-wrapper #button-2:checked~#slider>ul { left: -100% }
-  #slider-wrapper #button-3:checked~#slider>ul { left: -200% }
-  #slider-wrapper #button-4:checked~#slider>ul { left: -300% }
-  #slider-wrapper #button-5:checked~#slider>ul { left: -400% }
+
+  .carousel-caption{
+    text-align: end;
+  }
