--- a/css/carousel.css
+++ b/css/carousel.css
@@ -2,14 +2,15 @@
   position: relative;
 }
 
-.carousel-container {
-  box-shadow: 0 0 5px rgb(204, 204, 204);
+@media screen and (max-width: 767px) {
+  .carousel-img {
+    max-width: 356px;
+    height: 273px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 12px;
+  }
 }
-
-.carousel-container img {
-  border-radius: 0.5em;
-}
-
 .hidden {
   display: none;
 }
@@ -22,14 +23,20 @@
   display: inline;
 }
 
-.prev, .arrow {
+@media screen and (max-width: 767px) {
+  .arrow {
+    display: none;
+  }
+}
+.prev,
+.arrow {
   cursor: pointer;
   position: absolute;
   top: 50%;
   width: auto;
   margin: -1.5em -1.5em 0 -1.5em;
   padding: 19px 27px;
-  color: #007B25;
+  color: #007b25;
   font-size: 30px;
   transition: 0.3s ease;
   border-radius: 50%;
@@ -45,11 +52,22 @@
   right: 0;
 }
 
-.prev:hover, .next:hover {
+.prev:hover,
+.next:hover {
   box-shadow: 0 0 5px #fff;
   border: 1px solid #fff;
 }
 
 .carousel-caption {
+  margin-top: 15px;
   text-align: end;
+  font-size: 20px;
+  line-height: 1.36;
+}
+
+@media screen and (max-width: 767px) {
+  .carousel-caption {
+    margin-top: 11px;
+    text-align: center;
+  }
 }/*# sourceMappingURL=carousel.css.map */
