--- a/sass/about/about.scss
+++ b/sass/about/about.scss
@@ -51,7 +51,9 @@
 
 @media screen and (max-width: 767px){
   .about__title{
+    margin-bottom: 19px;
     font-size: 40px;
+    line-height: 0.95;
   }
 }
 
