--- a/css/about.css
+++ b/css/about.css
@@ -36,7 +36,9 @@
 
 @media screen and (max-width: 767px) {
   .about__title {
+    margin-bottom: 19px;
     font-size: 40px;
+    line-height: 0.95;
   }
 }
 .about__conteiner {
