--- a/css/contacts.css
+++ b/css/contacts.css
@@ -8,6 +8,7 @@
   .contacts-conteiner {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    padding-top: 82px;
   }
 }
 .contacts {
