--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,7 @@ body {
   }
 }
 .nav-item {
+  position: relative;
   padding-top: 48px;
   padding-bottom: 48px;
   font-size: 20px;
@@ -211,6 +212,15 @@ body {
 
 .nav-item:not(:last-child) {
   margin-right: 37px;
+}
+
+.nav-project::after {
+  content: "Prosjekter";
+  display: inline-block;
+  color: #087313;
+  position: absolute;
+  left: 0;
+  top: 51%;
 }
 
 .footer__conteiner {
@@ -358,18 +368,17 @@ body {
 }
 .contents-text {
   margin-top: 19px;
-  /* width: 764px; */
   font-size: 14px;
   font-weight: 400;
   line-height: 1.36;
 }
 
 @media screen and (max-width: 767px) {
-  .contents-text {
-    margin-top: 17px;
-  }
   .hero-img {
     max-width: 425px;
+  }
+  .contents-text {
+    margin-top: 1px;
   }
 }
 .housing {
@@ -709,6 +718,12 @@ body {
   font-size: 32px;
 }
 
+@media screen and (max-width: 767px) {
+  .options-paragraph {
+    font-size: 24px;
+    line-height: 1.3;
+  }
+}
 .options-list {
   padding: 31px 25px;
   background-color: #fed6b8;
@@ -726,7 +741,7 @@ body {
     padding-bottom: 176px;
   }
   .options-list {
-    margin-top: -33.3%;
+    margin-top: -35%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -830,6 +845,23 @@ body {
   text-align: center;
 }
 
+@media screen and (max-width: 767px) {
+  .description-block {
+    padding-top: 53px;
+  }
+  .description-title {
+    margin-bottom: 14px;
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 1.05;
+  }
+  .description-text {
+    margin-bottom: 26px;
+  }
+  .project-contact {
+    display: none;
+  }
+}
 .contacts-title {
   margin-bottom: 29px;
   font-size: 36px;
@@ -884,6 +916,7 @@ body {
   .contacts-conteiner {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    padding-top: 82px;
   }
 }
 .contacts {
@@ -1084,41 +1117,41 @@ body {
   }
 }
 .news__options {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin-top: 23px;
-  row-gap: 20px;
+  margin-top: 11px;
+}
+
+@media screen and (min-width: 768px) {
+  .news__options {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 23px;
+    row-gap: 20px;
+  }
+}
+.news-title {
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 1.05;
 }
 
 .news__options-paragraph {
-  grid-column-start: 2;
-  grid-row-start: 2;
-  margin-bottom: 17px;
-  font-size: 32px;
+  padding-bottom: 17px;
+  font-size: 24px;
+  line-height: 1.3;
 }
 
 .news__description {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  row-gap: 47px;
   padding-top: 18px;
   padding-bottom: 184px;
   font-size: 20px;
+  line-height: 1.6;
 }
 
-.news__description p {
-  grid-column-start: 2;
+@media screen and (min-width: 768px) {
+  .news__main-image > .contents-text {
+    width: 693px;
+  }
 }
-
-.news__main-image {
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-
-.news__description-blok {
-  grid-column-start: 2;
-}
-
 .news__description-blok h3 {
   margin-bottom: 29px;
   font-size: 36px;
@@ -1131,17 +1164,48 @@ body {
   text-align: center;
   font-size: 36px;
   font-weight: 900;
+  line-height: 1.05;
 }
 
 .news__quote-author {
+  font-size: 20px;
   font-weight: 400;
+  line-height: 1.6;
 }
 
-.news__second-image {
-  grid-column-start: 2;
-  grid-column-end: 3;
+@media screen and (min-width: 768px) {
+  .news-title {
+    width: 750px;
+  }
+  .news__options-paragraph {
+    grid-column-start: 2;
+    grid-row-start: 2;
+    font-size: 32px;
+  }
+  .news__description {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 47px;
+  }
+  .news__description p {
+    grid-column-start: 2;
+  }
+  .news__main-image {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .news__description-blok {
+    grid-column-start: 2;
+  }
+  .quote {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .news__second-image {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
 }
-
 .news__housing-description {
   margin-top: 16px;
   padding-bottom: 29px;
@@ -1149,6 +1213,42 @@ body {
   border-bottom: 1px solid #000;
 }
 
+@media screen and (max-width: 767px) {
+  .news-title {
+    font-size: 36px;
+  }
+  .news__description {
+    padding-bottom: 106px;
+  }
+  .news__description > p {
+    margin-bottom: 23px;
+  }
+  .news__main-image > img {
+    height: 302px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 12px;
+  }
+  .news__description-blok h3 {
+    margin-bottom: 20px;
+    font-size: 32px;
+  }
+  .quote {
+    margin-bottom: 40px;
+  }
+  .news__quote-text {
+    font-size: 32px;
+  }
+  .news__quote-author {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.6;
+  }
+  .news__housing-description {
+    font-size: 20px;
+    line-height: 1.6;
+  }
+}
 .about__img {
   margin: auto;
   background-image: url(../../img/about-apartment.png);
@@ -1187,7 +1287,9 @@ body {
 
 @media screen and (max-width: 767px) {
   .about__title {
+    margin-bottom: 19px;
     font-size: 40px;
+    line-height: 0.95;
   }
 }
 .about__conteiner {
