--- a/css/projectsCard.css
+++ b/css/projectsCard.css
@@ -42,6 +42,12 @@
   font-size: 32px;
 }
 
+@media screen and (max-width: 767px) {
+  .options-paragraph {
+    font-size: 24px;
+    line-height: 1.3;
+  }
+}
 .options-list {
   padding: 31px 25px;
   background-color: #fed6b8;
@@ -59,7 +65,7 @@
     padding-bottom: 176px;
   }
   .options-list {
-    margin-top: -33.3%;
+    margin-top: -35%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -163,6 +169,23 @@
   text-align: center;
 }
 
+@media screen and (max-width: 767px) {
+  .description-block {
+    padding-top: 53px;
+  }
+  .description-title {
+    margin-bottom: 14px;
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 1.05;
+  }
+  .description-text {
+    margin-bottom: 26px;
+  }
+  .project-contact {
+    display: none;
+  }
+}
 .contacts-title {
   margin-bottom: 29px;
   font-size: 36px;
