--- a/sass/projectsPage/carousel.scss
+++ b/sass/projectsPage/carousel.scss
@@ -39,7 +39,7 @@
   color: #007b25;
 
   font-size: 30px;
-  transition: 0.3s ease;
+  transition: 150ms ease;
   border-radius: 50%;
   user-select: none;
   background-color: #fff;
