--- a/css/main.css
+++ b/css/main.css
@@ -540,24 +540,35 @@ body {
     row-gap: 24px;
   }
 }
-.project-item {
+.card-item {
   justify-self: center;
 }
 
 @media screen and (max-width: 767px) {
-  .project-item:not(:last-child) {
+  .card-item:not(:last-child) {
     margin-bottom: 24px;
   }
 }
 @media screen and (min-width: 768px) {
-  .project-item {
+  .card-item {
     width: 384.33px;
   }
 }
-.projects-img {
-  /* width: 384.33px; */
-  /* height: 319.79px; */
-  border-radius: 3%;
+.card__link-img {
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.card-link {
+  display: block;
+}
+
+.card-img {
+  transition: 150ms;
+}
+
+.card-item:hover .card-img {
+  transform: scale(1.1);
 }
 
 .project-title {
@@ -603,20 +614,6 @@ body {
     row-gap: 24px;
   }
 }
-.news-item {
-  justify-self: center;
-}
-
-@media screen and (max-width: 767px) {
-  .news-item:not(:last-child) {
-    margin-bottom: 24px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .news-item {
-    width: 384.33px;
-  }
-}
 .news-date {
   margin-top: 16px;
   font-size: 14px;
@@ -624,7 +621,7 @@ body {
   line-height: 0.95;
 }
 
-.news-title {
+.news__card-title {
   margin-top: 4px;
   font-size: 20px;
   font-weight: 400;
