--- a/sass/mainPage/news/news.scss
+++ b/sass/mainPage/news/news.scss
@@ -28,24 +28,6 @@
   }
 }
 
-.news-item {
-
-  justify-self: center;
-}
-
-@media screen and (max-width:767px){
-  .news-item:not(:last-child){
-    margin-bottom: 24px;
-  }
-}
-
-@media screen and (min-width: 768px){
-  .news-item {
-    width: 384.33px;
-  }
-}
-
-
 .news-date {
   margin-top: 16px;
 
@@ -54,7 +36,7 @@
   line-height: 0.95;
 }
 
-.news-title {
+.news__card-title{
   margin-top: 4px;
   font-size: 20px;
   font-weight: 400;
