--- a/sass/body.scss
+++ b/sass/body.scss
@@ -30,7 +30,14 @@ body {
   }
 
   .accent-border{
-    border-bottom: 2px solid #007825
+    border-bottom: 2px solid #007825;
+
+    transition: border-bottom 100ms linear;
+  }
+
+  .accent-border:hover,
+  .accent-border:focus{
+    border-bottom: 2px solid rgba(255, 255, 255, 0);
   }
 
   .switch-border{
