--- a/css/main.css
+++ b/css/main.css
@@ -1158,7 +1158,8 @@ body {
   margin-bottom: 35px;
 }
 
-.contacts__form-formfield > input, textarea {
+.contacts__form-formfield > input,
+textarea {
   width: 100%;
   height: 50px;
   background-color: inherit;
@@ -1167,13 +1168,19 @@ body {
   transition: border-bottom 100ms linear;
 }
 
-.contacts__form-formfield > input:hover, textarea:hover {
+.contacts__form-formfield > input:hover,
+textarea:hover {
   border-bottom: 1px solid rgb(0, 123, 37);
 }
 
-.contacts__form-formfield > input:focus, textarea:focus {
+.contacts__form-formfield > input:focus,
+textarea:focus {
   outline: none;
   border-bottom: 2px solid rgb(0, 123, 37);
+}
+
+.contacts__form-formfield > input:focus + .contacts__form-formfield > label {
+  margin-left: 50px;
 }
 
 .contacts__form-formfield > label {
@@ -1183,10 +1190,6 @@ body {
 
 .contacts__form-formfield > textarea {
   height: 100%;
-}
-
-.contacts__form-formfield:hover label {
-  font-size: 13px;
 }
 
 .contacts__form-message {
